--- a/Contact.html
+++ b/Contact.html
@@ -41,9 +41,9 @@
             <img class="whatsapp" src="imgs/whatsapp.jpg" height="40px">
             </div>
             <div class="meinknt22">
-                <p class="number">+212 610980124</p>
+                <p class="number">Walid Afakhar</p>
                 <p class="intaname">marroquino_33_34</p>
-                <p class="facebookname">walid afakhar</p>
+                <p class="facebookname">+212 610980124</p>
             </div>
             <img class="ich3" src="imgs/ich3.jpeg" height="400px">
         </div>
@@ -60,4 +60,5 @@
         </div>
     </div>
 </body>
+
 </html>
