--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </div>
         </div>
         <div class="infos">
-            <h2 class="hallo">Hallo, Herzlich Wilkommen</h2>
+            <h2 class="hallo">Hallo, Herzlich Willkommen</h2>
             <h1 class="walid">Walid Afakhar, als Webentwickler</h1>
             <p class="blabla">Ich interessiere mich für Webentwicklung und Programmierung, 
                 den Aufbau einfacher <br> und moderner Websites und die Weiterentwicklung meiner Fähigkeiten<br> in diesem Bereich.</p>
@@ -63,4 +63,5 @@
         </div>
     </div>
 </body>
+
 </html>
